--- a/tox.ini
+++ b/tox.ini
@@ -7,23 +7,40 @@ deps =
 
 [tox]
 # Here is the list of our environments
-envlist = {py27,py34}-nmap{6.40,7.01}
+envlist = {py36,py37}-nmap{6.40,7.91}
 
-[testenv:py27-nmap6.40]
+[testenv:py37-nmap6.40]
 setenv =
    NMAP_XML_VERSION = 6.40
    
-[testenv:py27-nmap7.01]
+[testenv:py37-nmap7.01]
 setenv =
    NMAP_XML_VERSION = 7.01
 
-[testenv:py34-nmap6.40]
+[testenv:py37-nmap7.70]
+setenv =
+   NMAP_XML_VERSION = 7.70
+    
+[testenv:py37-nmap7.91]
+setenv =
+   NMAP_XML_VERSION = 7.91
+
+[testenv:py36-nmap6.40]
 setenv =
    NMAP_XML_VERSION = 6.40
    
-[testenv:py34-nmap7.01]
+[testenv:py36-nmap7.01]
 setenv =
    NMAP_XML_VERSION = 7.01
+
+[testenv:py36-nmap7.70]
+setenv =
+   NMAP_XML_VERSION = 7.70
+
+[testenv:py36-nmap7.91]
+setenv =
+   NMAP_XML_VERSION = 7.91
+
 
 
 [testenv]
@@ -31,22 +48,24 @@ setenv =
 passenv = NMAP_XML_VERSION
 usedevelop = True
 basepython =
-    py34: python3.4
-    py27: python2.7
+    py36: python3.6
+    py37: python3.7
 # Configure the actual testing command
 whitelist_externals = /usr/bin/make
-    /bin/ln
-    /bin/rm
-    /bin/echo
+    /usr/bin/ln
+    /usr/bin/rm
+    /usr/bin/echo
+    /usr/bin/grep
 commands =
     echo scanme_output-{env:NMAP_XML_VERSION}.xml
     rm -f scanme_output.xml
     ln -s scanme_output-{env:NMAP_XML_VERSION}.xml scanme_output.xml
-    make test
+    nosetests --with-coverage nmap -v # make test
 
 deps = {[base]deps}
     nmap-6.40: auie
     nmap-7.01: Xauie
+    nmap-7.70: Yauie
 
 
 
